# ResearchCopilot

./: .dockerignore  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  ARCHITECT.md  Dockerfile  Makefile  README.md  package-lock.json  pyproject.toml  ruff.toml
.agents/rules/: gitcommit.md  writelargefile.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 02cb5510215f_add_run_snapshot_interrupt_cot_fields.py  2e3f305b4dab_add_discovery_feedback_table.py  2eb31b4aa06d_add_user_auth_fields.py  66c2a73ad7e7_initial_schema.py  c879fed451ce_fix_editor_draft_updated_at_type_and_.py
backend/: main.py
backend/agent/: budget.py  graph.py  routing.py  state.py
backend/api/: dependencies.py  middleware.py  rate_limit.py
backend/clients/: auth_client.py  groq_stt.py  langgraph_client.py  langgraph_runner.py  storage_client.py
backend/core/: config.py  database.py  exceptions.py  logger.py  metrics.py
backend/migrations/: add_download_key.sql  add_notifications_table.sql
backend/models/: __init__.py  base.py  discovery_feedback.py  doc_summary.py  document.py  editor_draft.py  equation.py  figure.py  notification.py  paragraph.py  prompt_override.py  quota_record.py  reference.py  refresh_token.py  run_snapshot.py  section_heading.py  table.py  thread.py  user.py  workspace.py
backend/repositories/: base.py  document_repo.py  editor_repo.py  notification_repo.py  quota_repo.py  run_snapshot_repo.py  thread_repo.py  user_repo.py  workspace_repo.py
backend/scripts/: create_test_user.py
backend/services/: agent_service.py  artifacts_renderer.py  arxiv_downloader.py  auth_service.py  document_service.py  llm_gateway.py  (+10 more)
deployment/: Dockerfile.backend  docker-compose.monitoring.yml  docker-compose.yml  healthcheck.sh
docs/: ARCHITECT.md  DEVELOPMENT.md  FrontendCheckList.md  TODO.md  audit.md  todo.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  playwright.config.ts  playwright.smoke.config.ts  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
tests/: conftest.py
(+343 files in other folders)
